@@ -1,4 +1,10 @@
-﻿drkns 01.01.2016 15:07:30 +0200 - build 4500
+﻿drkns 01.01.2016 16:05:03 +0200 - build 4501
+
+1. Распространим 4496 и на вертикальные блоки тоже.
+
+2. Размер данных пишем всегда.
+
+drkns 01.01.2016 15:07:30 +0200 - build 4500
 
 1. Убрано дублирование вертикального блока в буфере обмена.
 
